crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_36.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
assertion_line: 211
---
F401 [*] `package.removed` imported but unused
 --> F401_36.py:6:5
  |
4 | from package import (
5 |     kept,  # noqa: F401
6 |     removed,
  |     ^^^^^^^
7 | )
  |
help: Remove unused import: `package.removed`
  |
5 |     kept,  # noqa: F401
  -     removed,
  - )
6 +     )
7 |
  |

F401 [*] `package2.removed2` imported but unused
  --> F401_36.py:11:5
   |
 9 | from package2 import (
10 |     kept2,  # ruff:ignore[F401]
11 |     removed2,
   |     ^^^^^^^^
12 | )
   |
help: Remove unused import: `package2.removed2`
   |
10 |     kept2,  # ruff:ignore[F401]
   -     removed2,
   - )
11 +     )
   |
