crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_10.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 `orjson` imported but unused; consider using `importlib.util.find_spec` to test for availability
 --> F401_10.py:6:16
  |
6 |         import orjson
  |                ^^^^^^
  |
help: Remove unused import: `orjson`

F401 `orjson` imported but unused; consider using `importlib.util.find_spec` to test for availability
  --> F401_10.py:15:16
   |
15 |         import orjson
   |                ^^^^^^
   |
help: Remove unused import: `orjson`
