crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_11.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `pathlib.PurePath` imported but unused
 --> F401_11.py:4:27
  |
3 | from typing import List
4 | from pathlib import Path, PurePath
  |                           ^^^^^^^^
help: Remove unused import: `pathlib.PurePath`
  |
4 - from pathlib import Path, PurePath
4 + from pathlib import Path
  |
