crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_15.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `pathlib.Path` imported but unused
 --> F401_15.py:5:25
  |
4 | if TYPE_CHECKING:
5 |     from pathlib import Path
  |                         ^^^^
help: Remove unused import: `pathlib.Path`
  |
5 -     from pathlib import Path
5 +     pass
  |
