crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_17.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `threading.Thread` imported but unused
  --> F401_17.py:12:27
   |
11 | def fn(thread: Thread):
12 |     from threading import Thread
   |                           ^^^^^^
13 |
14 |     # The `Thread` on the left-hand side should resolve to the `Thread` imported at the
   |
help: Remove unused import: `threading.Thread`
   |
12 -     from threading import Thread
   |

F401 [*] `threading.Thread` imported but unused
  --> F401_17.py:20:27
   |
19 | def fn(thread: Thread):
20 |     from threading import Thread
   |                           ^^^^^^
21 |
22 |     # The `Thread` on the left-hand side should resolve to the `Thread` imported at the
   |
help: Remove unused import: `threading.Thread`
   |
20 -     from threading import Thread
   |
