crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_18.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `__future__` imported but unused
 --> F401_18.py:5:12
  |
4 | def f():
5 |     import __future__
  |            ^^^^^^^^^^
help: Remove unused import: `__future__`
  |
5 -     import __future__
5 +     pass
  |
