crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_23.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `re.RegexFlag` imported but unused
 --> F401_23.py:4:16
  |
3 | from pathlib import Path
4 | from re import RegexFlag
  |                ^^^^^^^^^
5 | from typing import Annotated
  |
help: Remove unused import: `re.RegexFlag`
  |
4 - from re import RegexFlag
  |
