crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_34.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `typing.Union` imported but unused
  --> F401_34.py:45:24
   |
43 | # expressions either!)
44 | def f():
45 |     from typing import Union
   |                        ^^^^^
46 |
47 |     from typing_extensions import TypeAliasType
   |
help: Remove unused import: `typing.Union`
   |
45 -     from typing import Union
   |

F401 [*] `typing.Union` imported but unused
  --> F401_34.py:58:24
   |
57 | def f():
58 |     from typing import Union
   |                        ^^^^^
59 |
60 |     from typing_extensions import TypeAliasType
   |
help: Remove unused import: `typing.Union`
   |
58 -     from typing import Union
   |
