crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_36.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `snowflake.connector.pandas_tools.write_pandas` imported but unused
  --> F401_36.py:14:50
   |
12 | def f():
13 |     import snowflake.connector
14 |     from snowflake.connector.pandas_tools import write_pandas
   |                                                  ^^^^^^^^^^^^
15 |
16 |     snowflake.connector.pandas_tools.write_pandas
   |
help: Remove unused import: `snowflake.connector.pandas_tools.write_pandas`
11 | # Removing it would break `snowflake.connector.pandas_tools.write_pandas` below.
12 | def f():
13 |     import snowflake.connector
   -     from snowflake.connector.pandas_tools import write_pandas
14 |
15 |     snowflake.connector.pandas_tools.write_pandas
16 |

F401 [*] `snowflake.connector.pandas_tools.write_pandas` imported but unused
  --> F401_36.py:22:50
   |
20 | def f():
21 |     import snowflake.connector
22 |     from snowflake.connector.pandas_tools import write_pandas
   |                                                  ^^^^^^^^^^^^
23 |
24 |     snowflake.connector.pandas_tools
   |
help: Remove unused import: `snowflake.connector.pandas_tools.write_pandas`
19 | # OK: traversing the source-module path itself relies on the side effect.
20 | def f():
21 |     import snowflake.connector
   -     from snowflake.connector.pandas_tools import write_pandas
22 |
23 |     snowflake.connector.pandas_tools
24 |

F401 [*] `snowflake.connector.pandas_tools.write_pandas` imported but unused
  --> F401_36.py:31:50
   |
29 | def f():
30 |     import snowflake.connector.pandas_tools
31 |     from snowflake.connector.pandas_tools import write_pandas
   |                                                  ^^^^^^^^^^^^
32 |
33 |     snowflake.connector.pandas_tools
   |
help: Remove unused import: `snowflake.connector.pandas_tools.write_pandas`
28 | # which already provides the same side effect.
29 | def f():
30 |     import snowflake.connector.pandas_tools
   -     from snowflake.connector.pandas_tools import write_pandas
31 |
32 |     snowflake.connector.pandas_tools
33 |

F401 [*] `snowflake.connector.pandas_tools.write_pandas` imported but unused
  --> F401_36.py:39:50
   |
37 | def f():
38 |     import snowflake.connector
39 |     from snowflake.connector.pandas_tools import write_pandas
   |                                                  ^^^^^^^^^^^^
40 |
41 |     snowflake.connector
   |
help: Remove unused import: `snowflake.connector.pandas_tools.write_pandas`
36 | # Error: bound name is unused and no reference traverses the source-module path.
37 | def f():
38 |     import snowflake.connector
   -     from snowflake.connector.pandas_tools import write_pandas
39 |
40 |     snowflake.connector
41 |

F401 [*] `snowflake.connector.pandas_tools.write_pandas` imported but unused
  --> F401_36.py:49:50
   |
47 | def f():
48 |     import snowflake.connector
49 |     from snowflake.connector.pandas_tools import write_pandas
   |                                                  ^^^^^^^^^^^^
50 |     from snowflake.connector.pandas_tools import other
   |
help: Remove unused import: `snowflake.connector.pandas_tools.write_pandas`
46 | # depends on, so neither is flagged.
47 | def f():
48 |     import snowflake.connector
   -     from snowflake.connector.pandas_tools import write_pandas
49 |     from snowflake.connector.pandas_tools import other
50 |
51 |     snowflake.connector.pandas_tools.write_pandas

F401 [*] `snowflake.connector.pandas_tools.other` imported but unused
  --> F401_36.py:50:50
   |
48 |     import snowflake.connector
49 |     from snowflake.connector.pandas_tools import write_pandas
50 |     from snowflake.connector.pandas_tools import other
   |                                                  ^^^^^
51 |
52 |     snowflake.connector.pandas_tools.write_pandas
   |
help: Remove unused import: `snowflake.connector.pandas_tools.other`
47 | def f():
48 |     import snowflake.connector
49 |     from snowflake.connector.pandas_tools import write_pandas
   -     from snowflake.connector.pandas_tools import other
50 |
51 |     snowflake.connector.pandas_tools.write_pandas
52 |

F401 [*] `xml.sax` imported but unused
  --> F401_36.py:59:21
   |
57 | def f():
58 |     import xml
59 |     from xml import sax
   |                     ^^^
60 |
61 |     xml.sax.make_parser
   |
help: Remove unused import: `xml.sax`
56 | # `xml.sax`, which is set as an attribute of `xml` by the `from`-import.
57 | def f():
58 |     import xml
   -     from xml import sax
59 |
60 |     xml.sax.make_parser
