crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_37.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401_37.py:3:20: F401 [*] `typing.Union` imported but unused
  |
1 | """Regression test for https://github.com/astral-sh/ruff/issues/15812"""
2 |
3 | from typing import Union
  |                    ^^^^^ F401
4 |
5 | from typing_extensions import TypeAliasType
  |
  = help: Remove unused import: `typing.Union`

ℹ Safe fix
1 1 | """Regression test for https://github.com/astral-sh/ruff/issues/15812"""
2 2 | 
3   |-from typing import Union
4 3 | 
5 4 | from typing_extensions import TypeAliasType
6 5 |
