crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F401_F401_5.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `a.b.c` imported but unused
 --> F401_5.py:2:17
  |
1 | """Test: removal of multi-segment and aliases imports."""
2 | from a.b import c
  |                 ^
3 | from d.e import f as g
4 | import h.i
  |
help: Remove unused import: `a.b.c`
  |
2 - from a.b import c
  |

F401 [*] `d.e.f` imported but unused
 --> F401_5.py:3:22
  |
1 | """Test: removal of multi-segment and aliases imports."""
2 | from a.b import c
3 | from d.e import f as g
  |                      ^
4 | import h.i
5 | import j.k as l
  |
help: Remove unused import: `d.e.f`
  |
3 - from d.e import f as g
  |

F401 [*] `h.i` imported but unused
 --> F401_5.py:4:8
  |
2 | from a.b import c
3 | from d.e import f as g
4 | import h.i
  |        ^^^
5 | import j.k as l
  |
help: Remove unused import: `h.i`
  |
4 - import h.i
  |

F401 [*] `j.k` imported but unused
 --> F401_5.py:5:15
  |
3 | from d.e import f as g
4 | import h.i
5 | import j.k as l
  |               ^
help: Remove unused import: `j.k`
  |
5 - import j.k as l
  |
